# workspace

naive_malloc/: CMakeLists.txt  main.c  naive_malloc.c  naive_malloc.h
node/simple_server/: index.js  package.json
